--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,14 @@ jar {
     }
 }
 
+//None of this does anything as of yet
 task build {
-    println "Building project..."
+    doFirst {
+	println "Building project..."
+    }
+    doLast {
+        println "done!"
+    }
 }
 
 task clean {
