--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: java
+jdk:
+  - oraclejdk8
+
 
 //Install dependencies
 gradle assemble
 //Avoid uploading the cache after every build because gradle
 before_cache:
-    - rm -f $HOME/.gradle/chaches/modules-2/modules-2.lock
+    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
     - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
     directories:
