trying to connect main class to build script

--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ org.gradle.daemon = false
 //MODIFY
 jar {
     manifest {
-        'Main-Class': 'com.stuff.things.main' 
+        'Main-Class': '/TicTacToe/src/Main.java' 
 	 attributes(
         "Class-Path": configurations.compile.collect { it.getName() }.join(' '))
     }
