--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-/*
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 description = 'TicTacToe'
@@ -6,7 +5,7 @@ description = 'TicTacToe'
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
-    github repo url: 'https://github.com/NightOwls1/Sidannarverkefni2016.git'
+    github repo uri: 'https://github.com/NightOwls1/Sidannarverkefni2016.git'
     jcenter()
 }
 
@@ -36,9 +35,14 @@ tasks.whenTaskAdded { task ->
     task.ext.srcDir = 'src/main/java'
 }
 
-task task1 {
-    println "Some string"
+task task1
+
+task1 {
+    doFirst {
+        println "Hello, World!"
+    }
 }
+
 //None of this does anything as of yet
 task build {
     doFirst {
@@ -60,5 +64,3 @@ task test {
 task stage(dependsOn clean, build) {
     println "staging..."
 }
-
-*/
