--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ description = 'TicTacToe'
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
-    github repo url: 'https://github.com/NightOwls1/Sidannarverkefni2016.git'
+    github repo url 'https://github.com/NightOwls1/Sidannarverkefni2016.git'
     jcenter()
 }
 
