--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 // Apply the java plugin to add support for Java
-apply plugin: 'java'
+apply plugin: 'application'
 description = 'TicTacToe'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
-    //github repo url: 'https://github.com/NightOwls1/Sidannarverkefni2016.git'
+    //github { url "https://github.com/NightOwls1/Sidannarverkefni2016.git" }
     maven { url "https://jitpack.io" }
     jcenter()
 }
@@ -19,20 +19,21 @@ dependencies {
     testCompile 'junit:junit:4.12'
 }
 
-// Disable daemon, because contiuous integration
-//org.gradle.daemon = false
-
 //Create an executable jar file
 //MODIFY
-jar {
+/*jar {
     manifest {
         attributes('Main-Class': 'MODIFY')
         //'Class-Path': configurations.compile.collect { it.getName() }.join(' '))
     }
-}
+}*/
 
 tasks.whenTaskAdded { task ->
     task.ext.srcDir = 'src/main/java'
+}
+
+task stage {
+    dependsOn installDist
 }
 
 //None of this does anything as of yet
