--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,6 @@ description = 'TicTacToe'
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'jcenter' for resolving your dependencies.
-    //github { url "https://github.com/NightOwls1/Sidannarverkefni2016.git" }
-    maven { url "https://jitpack.io" }
     jcenter()
 }
 
@@ -14,29 +12,26 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'com.github.NightOwls1:Sidannarverkefni2016.git'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     testCompile 'junit:junit:4.12'
 }
+
+mainClassName = "mainPkg.Main"
 
 //Create an executable jar file
 //MODIFY
 /*jar {
     manifest {
-        attributes('Main-Class': 'MODIFY')
+        attributes('Main-Class': 'mainPkg.Main')
         //'Class-Path': configurations.compile.collect { it.getName() }.join(' '))
     }
 }*/
 
-tasks.whenTaskAdded { task ->
+/*tasks.whenTaskAdded { task ->
     task.ext.srcDir = 'src/main/java'
-}
+}*/
 
 task stage {
     dependsOn installDist
 }
-
-//None of this does anything as of yet
-
-//Modify to make swag
 
