--- a/build.gradle
+++ b/build.gradle
@@ -19,25 +19,26 @@ dependencies {
 mainClassName = "mainPkg.Main"
 
 sourceSets {
-    main.java.srcDir "TicTacToe/src/mainPkg/Main"
-    test.java.srcDir "TicTacToe/src/mainPgk/UnitTestTest"    
+    main.java.srcDir "src/main"
+    test.java.srcDir "src/test"    
 }
 
 task stage {
     dependsOn installDist
 }
 
-
-
+task hello {
+    println "Hello, World!"
+}
 
 //Create an executable jar file
 //MODIFY
-/*jar {
-    manifest {
-        attributes('Main-Class': 'mainPkg.Main')
-        //'Class-Path': configurations.compile.collect { it.getName() }.join(' '))
-    }
-}*/
+jar {
+    manifest.attributes "Main-Class": "mainPkg.Main"
+    manifest.attributes "Classpath": "."
+}
+
+
 
 /*tasks.whenTaskAdded { task ->
     task.ext.srcDir = 'src/main/java'
