--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 mainClassName = "mainPkg.Main"
 
 sourceSets {
-    main.java.srcDir "src/main"
-    test.java.srcDir "src/test"    
+    main.java.srcDir "TicTacToe/bin/Main"
+    test.java.srcDir "TicTacToe/bin/UnitTestTest"    
 }
 
 task stage {
@@ -35,7 +35,10 @@ task hello {
 //MODIFY
 jar {
     manifest.attributes "Main-Class": "mainPkg.Main"
-    manifest.attributes "Classpath": "."
+    manifest.attributes "Classpath": "TicTacToe.classpath"
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 
