all that stands in our way is a failing test, how nice

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ task stage {
     dependsOn installDist
 }
 
+task cbuild {
+    dependsOn clean, build
+}
+
 task hello {
     println "Hello, World!"
 }
